adiciona parte paciente

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -19,13 +19,15 @@ listar.paciente = List Patients
 click = Click Here
 CRUD.medico = Medic CRUD
 cadastrar = Register
+medico = doctor
 
-consultas.welcome = Consultas médicas
-consultas.entity = Médicos
+consultas.welcome = Consults
+consultas.entity = M\u00c3\u00a9dicos
 consultas.create = Nova consulta
 consultas.list= Lista de Consultas
-consultas.update = Edição
-consultas.delete =  Remoção
+consultas.update = Edi\u00c3\u00a7\u00c3\u00a3o
+consultas.delete =  Remo\u00c3\u00a7\u00c3\u00a3o
+consulta.data = Date
 
 medico.email = E-mail
 medico.senha = Password
