--- a/src/main/resources/message_pt.properties
+++ b/src/main/resources/message_pt.properties
@@ -1,7 +1,7 @@
-page.title = Sistema para agendamento de consulta de médico
-page.label = Autenticação de Usuários
+page.title = Sistema para agendamento de consulta de m\u00e9dico
+page.label = Autentica\u00c3\u00a7\u00c3\u00a3o de Usu\u00c3\u00a1rios
 main.link = Menu Principal
-actions.link = Ações
+actions.link = A\u00c3\u00a7\u00c3\u00b5es
 confirm.link = Tem certeza?
 save.link = Salva
 exit.link = Logout
@@ -10,22 +10,24 @@ table.titlep = Lista Pacientes
 table.change = Alterar
 login = Login 
 senha = Senha
-user = Usuário
+user = Usu\u00c3\u00a1rio
 list.espec = Listar Medicos por Especialidade
 saudacoes = Bem vindo
 entrar = Entrar
-lista.medico = Listar Medicos
-lista.paciente = Listar Pacientes
+listar.medico = Listar Medicos
+listar.paciente = Listar Pacientes
 click = Clique aqui
 CRUD.medico = CRUD Medicos
 cadastrar = Cadastrar
+medico = m\u00e9dico
 
-consultas.welcome = consultas médicas
-consultas.entity = Médicos
+consultas.welcome = consultas m\u00c3\u00a9dicas
+consultas.entity = M\u00c3\u00a9dicos
 consultas.create = Nova consulta
 consultas.list= Lista de consultas
-consultas.update = Edição
-consultas.delete =  Remoção
+consultas.update = Edi\u00c3\u00a7\u00c3\u00a3o
+consultas.delete =  Remo\u00c3\u00a7\u00c3\u00a3o
+consulta.data = Data
 
 medico.email = E-mail
 medico.senha = Senha
